<resources>
    <string name="app_name">punto4</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="radio">Radio</string>
    <string name="lado">Lado</string>
    <string name="cuadro">Cuadro</string>
    <string name="triangulo">Triangulo</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="circulo">Circulo</string>
    <string name="boton">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="action_settings">Settings</string>
</resources>
