<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/base"
            android:textSize="20dp"
            android:textAppearance="@style/FuenteTipo4"
            android:layout_weight="1.8"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="number"
            android:layout_weight="1"
            android:id="@+id/ebase"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textSize="20dp"
            android:textAppearance="@style/FuenteTipo4"
            android:layout_weight="1.8"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="number"
            android:layout_weight="1"
            android:id="@+id/ealtura"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio"
            android:textSize="20dp"
            android:textAppearance="@style/FuenteTipo4"
            android:layout_weight="1.8"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="number"
            android:layout_weight="1"
            android:id="@+id/eradio"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lado"
            android:textSize="20dp"
            android:textAppearance="@style/FuenteTipo4"
            android:layout_weight="1.8"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="number"
            android:layout_weight="1"
            android:id="@+id/elado"/>
    </LinearLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/ecuadro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/FuenteTipo4b"
            android:text="@string/cuadro"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/etriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/FuenteTipo4b"
            android:text="@string/triangulo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/erectangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/FuenteTipo4b"
            android:text="@string/rectangulo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/ecirculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/FuenteTipo4b"
            android:text="@string/circulo"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/boton"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:id="@+id/boton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/FuenteTipo4b"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:id="@+id/tResultado"/>

</LinearLayout>

